<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.miguel.misnotas.Programacion_horarios">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_schedule_default_clock_text"
        android:id="@+id/hora"
        android:gravity="center"
        android:textSize="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/ampm"
        android:gravity="bottom"
        android:textSize="30dp"
        android:layout_alignTop="@+id/hora"
        android:layout_toRightOf="@+id/hora"
        android:layout_toEndOf="@+id/hora" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/hora">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/week_monday"
                android:id="@+id/lunes" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/week_tuesday"
                android:id="@+id/martes" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/week_wednesday"
                android:id="@+id/miercoles" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/week_thursday"
                android:id="@+id/jueves" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/week_friday"
                android:id="@+id/viernes" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/week_saturday"
                android:id="@+id/sabado" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/week_sunday"
                android:id="@+id/domingo" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
