<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/start_stop_label"
        android:text="@string/dialog_audio_record_start_stop_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/voice_note_name_input"
        android:hint="@string/voice_note_label"
        android:gravity="center"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start_stop_audio_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/timer_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/default_timer_label"/>

</LinearLayout>
