<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView_productos"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="start"
                android:layout_weight="6.5"
                android:text="@string/week_monday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/fragment_week_expenses_default_value"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/edlunes"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="start"
                android:layout_weight="6.5"
                android:text="@string/week_tuesday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/fragment_week_expenses_default_value"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/edmartes"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="start"
                android:layout_weight="6.5"
                android:text="@string/week_wednesday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/fragment_week_expenses_default_value"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/edmiercoles"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="start"
                android:layout_weight="6.5"
                android:text="@string/week_thursday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/fragment_week_expenses_default_value"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/edjueves"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout4">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="start"
                android:layout_weight="6.5"
                android:text="@string/week_friday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/fragment_week_expenses_default_value"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/edviernes"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayouttot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="start"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_weight="6"
                android:text="@string/fragment_week_expenses_total_label"/>
            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="start"
                android:layout_weight="4"
                android:text="@string/fragment_week_expenses_default_total_label"/>
        </LinearLayout>
        <Button
            android:id="@+id/boton"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_week_expenses_delete_all"
            android:layout_below="@+id/linearLayouttot"
            android:layout_centerHorizontal="true" />
        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/boton">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="start"
                android:layout_weight="6.5"
                android:text="@string/week_saturday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/fragment_week_expenses_default_value"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/edsabado"
                android:layout_weight="2.5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout6">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="start"
                android:layout_weight="6.5"
                android:text="@string/week_sunday"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/fragment_week_expenses_default_value"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:inputType="number"
                android:ems="10"
                android:maxLength="4"
                android:id="@+id/eddomingo"
                android:layout_weight="2.5"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>